# transcription_test

./: LICENSE  README.md  pyproject.toml
db/: chroma.sqlite3
output/: report.md
src/transcription_test/: crew.py  main.py
src/transcription_test/config/: agents.yaml  tasks.yaml
src/transcription_test/tools/: custom_tool.py
