[tool.poetry]
name = "transcription_test"
version = "0.1.0"
description = "transcription-test using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
transcription_test = "transcription_test.main:run"
run_crew = "transcription_test.main:run"
train = "transcription_test.main:train"
replay = "transcription_test.main:replay"
test = "transcription_test.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
